<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#D3D3D3"
    tools:context=".ui.neighbour_list.DetailsNeighbourActivity"
    android:id="@+id/details_neighbour_activity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbarlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:gravity="center_vertical"
                android:scaleType="fitXY"
                android:adjustViewBounds="false"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:tint="#FFFF00"
        android:src="@drawable/ic_star_border_white_24dp"
        android:backgroundTint="#FFFF"
        android:clickable="true"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/ic_star_border_white_24dp"
        android:focusable="true" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.neighbour_list.MyNeighbourProfil">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:id="@+id/background_contact"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#fff" >

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/name"
                        android:textStyle="bold"
                        android:textSize="25sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="#B9B9B9" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/place_to_be"
                        android:layout_gravity="center_vertical"
                        android:drawablePadding="15dip"
                        android:drawableStart="@drawable/ic_baseline_place_24"
                        android:drawableTint="@color/colorAccent"
                        />

                    <TextView
                        android:id="@+id/number_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/hello"
                        android:layout_gravity="center_vertical"
                        android:drawablePadding="15dip"
                        android:drawableStart="@drawable/ic_baseline_phone_24"
                        android:drawableTint="@color/colorAccent"
                        />

                    <TextView
                        android:id="@+id/reseau_sociaux"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/social_media"
                        android:layout_gravity="center_vertical"
                        android:drawablePadding="15dip"
                        android:drawableStart="@drawable/ic_baseline_language_24"
                        android:drawableTint="@color/colorAccent"
                        />

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/background_about"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="#fff"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/background_contact" >

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/about_me"
                        android:textEditNoPasteWindowLayout="@id/background_contact"
                        app:layout_constraintTop_toTopOf="@id/background_about"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="#B9B9B9" />

                    <TextView
                        android:id="@+id/aboutMe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/more_text"
                        android:textEditNoPasteWindowLayout="@id/background_contact"
                        app:layout_constraintTop_toBottomOf="@id/title" />

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>



