<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="name">name</string>
    <string name="place_to_be">place to be</string>
    <string name="hello">hello</string>
    <string name="social_media">social media</string>
    <string name="about_me">About me</string>
    <string name="more_text">MORE TEXT</string>
</resources>
